# python_rules_clarification_repo

./: .bazeliskrc  .gitignore  MODULE.bazel
entry_points/: BUILD.bazel
python_application/: BUILD  pylint_test.py  python_application.py
toolchains/python/requirements/3.11/: BUILD  requirements.txt  requirements_lock.txt
